--- a/css/style.css
+++ b/css/style.css
@@ -232,12 +232,17 @@ body {
   align-items: center;
   justify-content: center;
   display: flex;
+  margin-bottom: 8px;
 }
 
 /* -----WE DO----- */
 .we-do-list {
   display: flex;
   gap: 24px;
+}
+
+.we-do {
+  padding-top: 0;
 }
 
 /* -----TEAM----- */
@@ -340,6 +345,7 @@ body {
 
 .footer-container {
   display: flex;
+  justify-content: space-between;
 }
 
 .end-logo {
@@ -354,14 +360,6 @@ body {
 
   max-width: 264px;
   margin-top: 16px;
-}
-
-.footer-first-list {
-  margin-right: 120px;
-}
-
-.footer-second-list {
-  margin-right: 80px;
 }
 
 .footer-title {
@@ -395,24 +393,34 @@ body {
 
 .footer-forth-list {
   display: flex;
-  justify-content: center;
+  gap: 24px;
   align-items: center;
 }
 
 .footer-input {
-  display: block;
   height: 40px;
   width: 264px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding: 8px 16px;
+  color: #fff;
 }
 
 .subscribe-btn {
-  display: block;
   padding: 8px 24px;
   height: 40px;
+  display: flex;
+  gap: 16px;
+}
+
+.subscribe-btn::after {
+  content: '';
+  background-image: url(../img/subscribe.svg);
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 /* -----MODAL----- */
@@ -425,7 +433,7 @@ body {
   transition: opacity 300ms linear, visibility 300ms linear;
 }
 
-.backdrop.is-hidden {
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -436,6 +444,7 @@ body {
 }
 
 .modal {
+  padding: 72px 24px 24px;
   width: 408px;
   min-height: 600px;
   border-radius: 4px;
@@ -472,6 +481,96 @@ body {
   width: 8px;
   height: 8px;
   fill: currentColor;
+}
+
+.modal-title {
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1, 5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+
+.input-title {
+  margin-bottom: 4px;
+  color: #8e8f99;
+
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.33;
+  letter-spacing: 0.48px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  margin-bottom: 8px;
+  padding: 8px 16px;
+  outline: none;
+}
+.modal-input:focus {
+  outline: 1px solid #4d5ae5;
+}
+
+.input-wrap {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.input-icon {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  /* top: 50%;
+  left: 0;
+  transform: translateY(-50%); */
+}
+
+.modal-textarea {
+  height: 120px;
+  width: 100%;
+  margin-bottom: 16px;
+}
+.privacy-wrap {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.checkbox-title {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-title::before {
+  content: '';
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid #2e2f42;
+  display: block;
+  margin-right: 8px;
+}
+
+.checkbox-modal:checked + .checkbox-title::before {
+  background-image: url(../img/check.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 16px;
+  height: 16px;
+  background-color: var(--iris-color);
+  border: transparent;
+}
+
+.privacy-link {
+  color: #4d5ae5;
+  text-decoration: underline;
 }
 
 .modal-send-btn {
