--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@ body {
   text-align: center;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.32px;
   margin-bottom: 16px;
 }
@@ -509,34 +509,40 @@ body {
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  margin-bottom: 8px;
-  padding: 8px 16px;
+  padding: 8px 38px;
   outline: none;
 }
+
 .modal-input:focus {
   outline: 1px solid #4d5ae5;
+}
+
+.modal-input:focus + .input-icon {
+  fill: #4d5ae5;
 }
 
 .input-wrap {
   position: relative;
   display: flex;
   align-items: center;
+  margin-bottom: 8px;
 }
 
 .input-icon {
   position: absolute;
   width: 18px;
   height: 18px;
-  /* top: 50%;
-  left: 0;
-  transform: translateY(-50%); */
+  left: 16px;
 }
 
 .modal-textarea {
   height: 120px;
   width: 100%;
   margin-bottom: 16px;
+  padding-left: 16px;
+  resize: none;
 }
+
 .privacy-wrap {
   display: flex;
   align-items: center;
@@ -624,10 +630,10 @@ body {
 }
 
 .portfolio-item {
-  /* width: calc((100%-48px) / 3); */
   width: 360px;
   border: 1px solid #e7e9fc;
   background: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-desc-wrap {
