--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body {
 }
 
 .container {
-  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -76,58 +75,12 @@ body {
   align-items: center;
 }
 
-.nav-list {
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-
-  display: flex;
-  gap: 40px;
-  margin-left: 76px;
-}
-
-.nav-link {
-  position: relative;
-  transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--iris-color);
-}
-
-.nav-link.active::before {
-  content: '';
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--iris-color);
-  position: absolute;
-  bottom: -32px;
-}
-
+.nav,
 .address-wrap {
-  margin-left: auto;
+  display: none;
 }
 
-.address-list {
-  display: flex;
-  gap: 40px;
-}
-
-.address-link {
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  color: var(--descr-color);
-  font-style: normal;
-  display: block;
-  transition: color 300ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-link:hover,
-.address-link:focus {
-  color: var(--iris-color);
-}
+/* HERO */
 
 .hero {
   background: var(--grey, rgba(46, 47, 66, 0.7));
@@ -135,26 +88,25 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../img/hero-bg.jpg);
+    url(../img/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin: 0 auto;
-  max-width: 1440px;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
 }
 
 .hero-title {
-  max-width: 500px;
+  max-width: 320px;
   color: #fff;
   text-align: center;
-  font-size: 56px;
   font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 1.12px;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
 }
 
 .btn {
@@ -183,8 +135,8 @@ body {
 }
 
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .title {
@@ -198,18 +150,30 @@ body {
   margin-bottom: 72px;
 }
 
+.about-title {
+  color: var(--main-color);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  margin-bottom: 8px;
+  text-align: center;
+}
+
 .item-title {
   color: var(--main-color);
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
+  text-align: center;
   margin-bottom: 8px;
 }
 
 .item-text {
   color: var(--descr-color);
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
@@ -217,32 +181,21 @@ body {
 /* -----ABOUT----- */
 .about-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .about-item {
-  width: 264px;
+  width: 396px;
 }
 
 .about-element-icon {
-  width: 264px;
-  height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  margin-bottom: 8px;
+  display: none;
 }
 
 /* -----WE DO----- */
-.we-do-list {
-  display: flex;
-  gap: 24px;
-}
-
 .we-do {
-  padding-top: 0;
+  display: none;
 }
 
 /* -----TEAM----- */
@@ -252,7 +205,9 @@ body {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  row-gap: 72px;
+  justify-content: center;
 }
 
 .team-item {
@@ -307,7 +262,9 @@ body {
 
 .customer-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px 16px;
 }
 
 .customer-link {
@@ -345,7 +302,14 @@ body {
 
 .footer-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.footer-logo {
+  text-align: center;
+  display: block;
+  margin-bottom: 16px;
 }
 
 .end-logo {
@@ -359,7 +323,8 @@ body {
   letter-spacing: 0.32px;
 
   max-width: 264px;
-  margin-top: 16px;
+  text-align: center;
+  margin-bottom: 72px;
 }
 
 .footer-title {
@@ -367,12 +332,14 @@ body {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  text-align: center;
   margin-bottom: 16px;
 }
 
 .footer-social-list {
   display: flex;
   gap: 16px;
+  margin-bottom: 72px;
 }
 
 .footer-social-item {
@@ -393,13 +360,15 @@ body {
 
 .footer-forth-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 24px;
   align-items: center;
+  justify-content: center;
 }
 
 .footer-input {
   height: 40px;
-  width: 264px;
+  width: 100%;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background: rgba(33, 150, 243, 0);
@@ -424,6 +393,12 @@ body {
 }
 
 /* -----MODAL----- */
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 .backdrop {
   width: 100%;
   height: 100%;
@@ -431,12 +406,6 @@ body {
   position: fixed;
   top: 0;
   transition: opacity 300ms linear, visibility 300ms linear;
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .backdrop.is-hidden .modal {
