--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,6 +8,20 @@
     padding-bottom: 120px;
   }
 
+  .nav-link.active::before {
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--iris-color);
+    position: absolute;
+    bottom: -32px;
+  }
+  .address-list {
+    display: flex;
+    gap: 40px;
+  }
+
   /* HERO */
   .hero {
     background: var(--grey, rgba(46, 47, 66, 0.7));
