--- a/css/style.css
+++ b/css/style.css
@@ -624,18 +624,22 @@ body {
 
 /* ----------------------------PORTFOLIO------------------------ */
 .section-portfolio {
-  padding-top: 96px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 .filtr-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  margin-bottom: 72px;
-  justify-content: center;
+  gap: 16px 24px;
+  margin-bottom: 48px;
 }
 
+/* .filtr-btn{
+  display: block;
+} */
 .filtr-link {
+  display: inline-block;
   border-radius: 4px;
   border: 1px solid #e7e9fc;
   background: #f4f4fd;
@@ -658,6 +662,15 @@ body {
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
 
+.portfolio-item-title {
+  color: var(--main-color);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  margin-bottom: 8px;
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -667,7 +680,7 @@ body {
 }
 
 .portfolio-item {
-  width: 360px;
+  width: 396px;
   border: 1px solid #e7e9fc;
   background: #fff;
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -702,6 +715,6 @@ body {
 }
 
 .portfolio-text-wrap {
-  width: 360px;
+  width: 396px;
   padding: 32px 16px;
 }
